# storage2sheet

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: gf-deploy.yaml
etc/: run.sh
specification/: usage.md
src/: main.py  runner.py
src/repository/: __init__.py
src/repository/sheet/: __init__.py  sheet.py
src/repository/storage/: __init__.py  storage.py
